<resources>
    <string name="app_name">AsistenciaQR</string>

    <string name="backToLogin_String">Back To Login</string>

    <string name="login_String">Login</string>
    <string name="logout_String">Logout</string>
    <string name="modify_String">Modify Account</string>
    <string name="takeAssist_String">Take Assists</string>

    <string name="register_String">REGISTER</string>

    <string name="profilePicture">Profile Picture</string>

    <string name="userName_String">User Name</string>
    <string name="password_String">Password</string>
    <string name="passwordRepeat_String">Repeat Password</string>

    <string name="name_String">Name</string>
    <string name="lastName_String"> Last Name</string>
    <string name="email_String">Email</string>

    <string name="time_String">00:00</string>
</resources>